Doc/force-app/main/default/objects/Strategic_Customer_Deliverable__c/Strategic_Customer_Deliverable__c.object-meta.xml
<CustomObject>
    <label>Strategic Customer Deliverable</label>
    <nameField>
        <displayFormat>SCD-{000000}</displayFormat>
        <label>Strategic Customer Deliverable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Customer Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>