Doc/force-app/main/default/objects/Strategic_Customer_Deliverable__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Strategic_Customer_Program__r.Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>