Doc/force-app/main/default/objects/Strategic_Customer_Deliverable__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Twice Yearly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>